package com.pbo.minefield;

public class Vector2Int {
    public int x;
    public int y;
    public Vector2Int()
    {

    }
    public Vector2Int(int x, int y)
    {
        this.x = x;
        this.y = y;
    }

}
